# xdpd

./: .gitignore  configure.ac
config/: hw.m4  plugin_py.m4  plugins.m4
src/xdpd/drivers/gnu_linux/src/: Makefile.am  bg_taskmanager.cc  config.cc  config.h
src/xdpd/drivers/gnu_linux/src/filters/: Makefile.am  ipv4_filter.cc  ipv4_filter.h  ipv4_frag_filter.cc  ipv4_reas_filter.cc
src/xdpd/drivers/gnu_linux/src/hal-imp/: driver.cc
src/xdpd/drivers/gnu_linux/src/io/: datapacketx86.cc  datapacketx86.h  iface_utils.cc
src/xdpd/drivers/gnu_linux/src/pipeline-imp/: packet.h  packet_inline.h  packet_proto_meta_imp.h  platform_hooks_of1x.cc
src/xdpd/drivers/gnu_linux/src/processing/: ls_internal_state.h
src/xdpd/management/: Makefile.am  port_manager.h  switch_manager.cc  switch_manager.h  system_manager.cc  system_manager.h
src/xdpd/management/extensions/: Makefile.am  pm_ext.cc  pm_ext.h  sm_ext.cc  sm_ext.h
src/xdpd/management/plugins/: Makefile.am  plugin_manager_loader.cc
src/xdpd/management/plugins/config/: example_complex.cfg  scope.cc  scope.h
src/xdpd/management/plugins/py/: Makefile.am  Plugin.am  exported.cc  exported.h  helloworld.py  launcher.py  libxdpd_mgmt_py_native.py  native.i  native_wrap.cxx  py.cc  py.h  rest.py
src/xdpd/management/plugins/rest/: delete-controllers.h  get-controllers.h  misc-controllers.cc  put-controllers.h  rest.cc  sw-controllers.cc  xcli
src/xdpd/management/plugins/xmp/: cxmpie_multipart.cc  cxmpies.cc  xmp.cc
src/xdpd/management/snapshots/: controller_snapshot.h  flow_entry_snapshot.h  group_mod_snapshot.h
(+79 files in other folders)
